# airflow_project

./: .env.example  .gitignore  README.md  docker-compose.yml
airflow_tasks/: Dockerfile  pyproject.toml
airflow_tasks/dags/: currency_dag.py  weather_dag.py
airflow_tasks/dags/common/config/: config.py
airflow_tasks/dags/common/gateway/: driver.py
airflow_tasks/dags/common/parsers/: currency.py  weather.py
airflow_tasks/dags/common/schemas/: currency.py  weather.py
api/: main.py  pyproject.toml
api/config/: config.py
api/database/: errors.py  sessions.py
api/migrations/: env.py
api/migrations/versions/: 0981feadc960_init.py
api/repositories/: base.py  currency.py  weather.py
api/routers/: currency.py  weather.py
api/schemas/: __init__.py  currency.py  weather.py
